migrated to Xtext/Xtend 2.5