@@ -13,106 +13,21 @@
 	<artifactId>de.abg.jreichert.operadsl</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
+	<properties>
+		<skip.mwe2>false</skip.mwe2>
+		<mwe2.relative.path>src/de/abg/jreichert/GenerateOperaDSL.mwe2</mwe2.relative.path>
+	</properties>
+
 	<build>
-		<resources>
-			<resource>
-				<directory>${project.build.directory}/xtext</directory>
-			</resource>
-		</resources>
 		<plugins>
 			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/xtext</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src</directory>
-									<includes>
-										<include>**/*.xtext</include>
-										<include>**/*.mwe2</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-clean-plugin</artifactId>
-				<configuration>
-					<filesets>
-						<fileset>
-							<directory>src-gen</directory>
-							<excludes>
-								<exclude>.gitignore</exclude>
-							</excludes>
-						</fileset>
-						<fileset>
-							<directory>xtend-gen</directory>
-							<excludes>
-								<exclude>.gitignore</exclude>
-							</excludes>
-						</fileset>
-						<fileset>
-							<directory>../${project.artifactId}.ui/src-gen</directory>
-							<excludes>
-								<exclude>.gitignore</exclude>
-							</excludes>
-						</fileset>
-						<fileset>
-							<directory>../${project.artifactId}.tests/src-gen</directory>
-							<excludes>
-								<exclude>.gitignore</exclude>
-							</excludes>
-						</fileset>
-					</filesets>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.fornax.toolsupport</groupId>
-				<artifactId>fornax-oaw-m2-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>xtext</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>run-workflow</goal>
-						</goals>
-						<configuration>
-							<workflowEngine>mwe2</workflowEngine>
-							<workflowDescriptor>de.abg.jreichert.GenerateOperaDSL</workflowDescriptor>
-							<timestampFileName>xtext-generator.timestamp</timestampFileName>
-							<jvmSettings>
-								<fork>false</fork>
-								<jvmArgs>
-									<jvmArg>-Xms100m</jvmArg>
-									<jvmArg>-Xmx700m</jvmArg>
-									<jvmArg>-XX:MaxPermSize=128m</jvmArg>
-									<jvmArg>-Dlog4j.configuration=file:${basedir}/log4j.properties</jvmArg>
-								</jvmArgs>
-							</jvmSettings>
-						</configuration>
-					</execution>
-				</executions>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>			
+			</plugin>
 		</plugins>
 	</build>
 </project>
